--- a/MathInterpreter.vcxproj.filters
+++ b/MathInterpreter.vcxproj.filters
@@ -42,6 +42,9 @@
     <ClCompile Include="FunctionPointer.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="memtrace.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Tokenizer.h">
@@ -66,6 +69,12 @@
       <Filter>Header Files</Filter>
     </ClInclude>
     <ClInclude Include="FunctionPointer.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="memtrace.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="DoubleFunctionPointer.h">
       <Filter>Header Files</Filter>
     </ClInclude>
   </ItemGroup>
